--- a/src/main/resources/assets/basemetals/lang/en_US.lang
+++ b/src/main/resources/assets/basemetals/lang/en_US.lang
@@ -1,6 +1,6 @@
 language_support_goals=english (en_US,en_EN,en_CA,en_GB, en_AU, en_PT), spanish (es_MX,es_ES), simplified chinese (zh_CN), japanese (ja_JA), portugese (pt_BR), german (de_DE)
 
-nei.basemetals.recipehandler.crusher.name
+nei.basemetals.recipehandler.crusher.name=Crushed Blocks
 
 item.basemetals.adamantine_axe.name=Adamantine Axe
 item.basemetals.adamantine_bars.name=Adamantine Bars
