Made the crack hammer able to crush items lying on the ground

--- a/src/main/resources/assets/basemetals/lang/en_US.lang
+++ b/src/main/resources/assets/basemetals/lang/en_US.lang
@@ -56,6 +56,7 @@ item.basemetals.bronze_powder.name=Powdered Bronze
 item.basemetals.bronze_shovel.name=Bronze Shovel
 item.basemetals.bronze_sword.name=Bronze Sword
 item.basemetals.bronze_trapdoor.name=Bronze Trapdoor
+item.basemetals.carbon_powder.name=Carbon Dust
 item.basemetals.coldiron_axe.name=Cold-Iron Axe
 item.basemetals.coldiron_bars.name=Cold-Iron Bars
 item.basemetals.coldiron_block.name=Cold-Iron Block
