Fixed another typo. All that's left to do is ore spawning

--- a/src/main/resources/assets/basemetals/lang/en_US.lang
+++ b/src/main/resources/assets/basemetals/lang/en_US.lang
@@ -129,7 +129,7 @@ item.basemetals.invar_powder.name=Powdered Invar
 item.basemetals.invar_shovel.name=Invar Shovel
 item.basemetals.invar_sword.name=Invar Sword
 item.basemetals.invar_trapdoor.name=Invar Trapdoor
-item.basemetals.iron_crackhammer.name=Invar Crack Hammer
+item.basemetals.iron_crackhammer.name=Iron Crack Hammer
 item.basemetals.iron_powder.name=Powdered Iron
 item.basemetals.gold_powder.name=Powdered Gold
 item.basemetals.lead_axe.name=Lead Axe
