adding new fantasy metal: aquarium

--- a/src/main/resources/assets/basemetals/lang/en_US.lang
+++ b/src/main/resources/assets/basemetals/lang/en_US.lang
@@ -1,6 +1,4 @@
-language_support_goals=english (en_US,en_EN,en_CA,en_GB, en_AU, en_PT), spanish (es_MX,es_ES), simplified chinese (zh_CN), portugese(pt_BR), italian(IT_it), japanese (ja_JA), portugese (pt_BR), german (de_DE)
-
-nei.basemetals.recipehandler.crusher.name=Crushed Blocks
+nei.basemetals.recipehandler.crusher.name=Crushed Blocks/Items
 
 item.basemetals.adamantine_axe.name=Adamantine Axe
 item.basemetals.adamantine_bars.name=Adamantine Bars
@@ -20,6 +18,25 @@ item.basemetals.adamantine_powder.name=Powdered Adamantine
 item.basemetals.adamantine_shovel.name=Adamantine Shovel
 item.basemetals.adamantine_sword.name=Adamantine Sword
 item.basemetals.adamantine_trapdoor.name=Adamantine Trapdoor
+item.basemetals.aquarium_axe.name=Aquarium Axe
+item.basemetals.aquarium_bars.name=Aquarium Bars
+item.basemetals.aquarium_blend.name=Aquarium Blend
+item.basemetals.aquarium_block.name=Aquarium Block
+item.basemetals.aquarium_boots.name=Aquarium Boots
+item.basemetals.aquarium_chestplate.name=Aquarium Chestplate
+item.basemetals.aquarium_crackhammer.name=Aquarium Crack Hammer
+item.basemetals.aquarium_door.name=Aquarium Door
+item.basemetals.aquarium_helmet.name=Aquarium Helmet
+item.basemetals.aquarium_hoe.name=Aquarium Hoe
+item.basemetals.aquarium_ingot.name=Aquarium Ingot
+item.basemetals.aquarium_leggings.name=Aquarium Leg Armor
+item.basemetals.aquarium_nugget.name=Aquarium Nugget
+item.basemetals.aquarium_ore.name=Aquarium Ore
+item.basemetals.aquarium_pickaxe.name=Aquarium Pickaxe
+item.basemetals.aquarium_powder.name=Powdered Aquarium
+item.basemetals.aquarium_shovel.name=Aquarium Shovel
+item.basemetals.aquarium_sword.name=Aquarium Sword
+item.basemetals.aquarium_trapdoor.name=Aquarium Trapdoor
 item.basemetals.brass_axe.name=Brass Axe
 item.basemetals.brass_bars.name=Brass Bars
 item.basemetals.brass_blend.name=Brass Blend
@@ -273,6 +290,10 @@ tile.basemetals.adamantine_block.name=Adamantine Block
 tile.basemetals.adamantine_door.name=Adamantine Door
 tile.basemetals.adamantine_ore.name=Adamantine Ore
 tile.basemetals.adamantine_trapdoor.name=Adamantine Trapdoor
+tile.basemetals.aquarium_bars.name=Aquarium Bars
+tile.basemetals.aquarium_block.name=Aquarium Block
+tile.basemetals.aquarium_door.name=Aquarium Door
+tile.basemetals.aquarium_trapdoor.name=Aquarium Trapdoor
 tile.basemetals.brass_bars.name=Brass Bars
 tile.basemetals.brass_block.name=Brass Block
 tile.basemetals.brass_door.name=Brass Door
