--- a/src/main/resources/assets/basemetals/lang/it_IT.lang
+++ b/src/main/resources/assets/basemetals/lang/it_IT.lang
@@ -335,3 +335,28 @@ tile.basemetals.tin_ore.name=Latta Minerale
 tile.basemetals.tin_trapdoor.name=Latta Fuori Porta
 tile.basemetals.zinc_block.name=Zinco Cubo
 tile.basemetals.zinc_ore.name=Zinco Minerale
+
+
+item.basemetals.aquarium_axe.name=Ascia Pesce-Acciaio
+item.basemetals.aquarium_bars.name=Barra Pesce-Acciaio
+item.basemetals.aquarium_blend.name=Miscela Pesce-Acciaio
+item.basemetals.aquarium_block.name=Cubo Pesce-Acciaio
+item.basemetals.aquarium_boots.name=Stivali Pesce-Acciaio
+item.basemetals.aquarium_chestplate.name=Corazza Pesce-Acciaio
+item.basemetals.aquarium_crackhammer.name=Mazza Pesce-Acciaio
+item.basemetals.aquarium_door.name=Porta Pesce-Acciaio
+item.basemetals.aquarium_helmet.name=Casco Pesce-Acciaio
+item.basemetals.aquarium_hoe.name=Zappare Pesce-Acciaio
+item.basemetals.aquarium_ingot.name=Lingotto Pesce-Acciaio
+item.basemetals.aquarium_leggings.name=Pantaloni Pesce-Acciaio
+item.basemetals.aquarium_nugget.name=Sassolino Pesce-Acciaio
+item.basemetals.aquarium_ore.name=Mineral Pesce-Acciaio
+item.basemetals.aquarium_pickaxe.name=Piccone Pesce-Acciaio
+item.basemetals.aquarium_powder.name=Pesce-Acciaio Polverizzato
+item.basemetals.aquarium_shovel.name=Pala Pesce-Acciaio
+item.basemetals.aquarium_sword.name=Spada Pesce-Acciaio
+item.basemetals.aquarium_trapdoor.name=Fuori Porta Pesce-Acciaio
+tile.basemetals.aquarium_bars.name=Barra Pesce-Acciaio
+tile.basemetals.aquarium_block.name=Cubo Pesce-Acciaio
+tile.basemetals.aquarium_door.name=Porta Pesce-Acciaio
+tile.basemetals.aquarium_trapdoor.name=Fuori Porta Pesce-Acciaio
