added language entry for iron nuggets. Open Computers can't use these nuggets for some reason, though

--- a/src/main/resources/assets/basemetals/lang/es_MX.lang
+++ b/src/main/resources/assets/basemetals/lang/es_MX.lang
@@ -131,6 +131,7 @@ item.basemetals.invar_sword.name=Invar Espada
 item.basemetals.invar_trapdoor.name=Invar Trampa
 item.basemetals.iron_crackhammer.name=Hierro Almádena
 item.basemetals.iron_powder.name=Polvo Hierro
+item.basemetals.iron_nugget.name=Pepita Hierro
 item.basemetals.gold_powder.name=Polvo Oro
 item.basemetals.lead_axe.name=Plomo Hacha
 item.basemetals.lead_bars.name=Plomo Barras
