--- a/src/main/resources/assets/basemetals/lang/it_IT.lang
+++ b/src/main/resources/assets/basemetals/lang/it_IT.lang
@@ -130,6 +130,7 @@ item.basemetals.invar_shovel.name=Invar Pala
 item.basemetals.invar_sword.name=Invar Spada
 item.basemetals.invar_trapdoor.name=Invar Fuori Porta
 item.basemetals.iron_crackhammer.name=Ferro Mazza
+item.basemetals.iron_nugget.name=Ferro Sassolino
 item.basemetals.iron_powder.name=Polvere Ferro
 item.basemetals.gold_powder.name=Polvere Oro
 item.basemetals.lead_axe.name=Piombo Ascia
