--- a/src/main/resources/assets/basemetals/lang/pt_BR.lang
+++ b/src/main/resources/assets/basemetals/lang/pt_BR.lang
@@ -130,6 +130,7 @@ item.basemetals.invar_shovel.name=Pá de Invar
 item.basemetals.invar_sword.name=Espada de Invar
 item.basemetals.invar_trapdoor.name=Alçapão de Invar
 item.basemetals.iron_crackhammer.name=Marreta de Ferro
+item.basemetals.iron_nugget.name=Pepita de Ferro
 item.basemetals.iron_powder.name=Ferro Pulverizado
 item.basemetals.gold_powder.name=Ouro Pulverizado
 item.basemetals.lead_axe.name=Machado de Chumbo
