--- a/src/main/resources/assets/basemetals/lang/zh_CN.lang
+++ b/src/main/resources/assets/basemetals/lang/zh_CN.lang
@@ -130,6 +130,7 @@ item.basemetals.invar_shovel.name=殷钢 铲
 item.basemetals.invar_sword.name=殷钢 剑
 item.basemetals.invar_trapdoor.name=殷钢 暗门
 item.basemetals.iron_crackhammer.name=铁 大锤
+item.basemetals.iron_nugget.name=铁 金块
 item.basemetals.iron_powder.name=粉 铁
 item.basemetals.gold_powder.name=粉 金
 item.basemetals.lead_axe.name=铅金 斧
