--- a/src/main/resources/assets/basemetals/lang/en_EN.lang
+++ b/src/main/resources/assets/basemetals/lang/en_EN.lang
@@ -148,6 +148,7 @@ item.basemetals.invar_sword.name=Invar Sword
 item.basemetals.invar_trapdoor.name=Invar Trapdoor
 item.basemetals.iron_crackhammer.name=Iron Crack Hammer
 item.basemetals.iron_powder.name=Powdered Iron
+item.basemetals.iron_nugget.name=Iron Nugget
 item.basemetals.gold_powder.name=Powdered Gold
 item.basemetals.lead_axe.name=Lead Axe
 item.basemetals.lead_bars.name=Lead Bars
