--- a/src/main/resources/assets/basemetals/lang/es_ES.lang
+++ b/src/main/resources/assets/basemetals/lang/es_ES.lang
@@ -130,6 +130,7 @@ item.basemetals.invar_shovel.name=Invar Pala
 item.basemetals.invar_sword.name=Invar Espada
 item.basemetals.invar_trapdoor.name=Invar Trampa
 item.basemetals.iron_crackhammer.name=Hierro Almádena
+item.basemetals.iron_nugget.name=Pepita Hierro
 item.basemetals.iron_powder.name=Polvo Hierro
 item.basemetals.gold_powder.name=Polvo Oro
 item.basemetals.lead_axe.name=Plomo Hacha
