--- a/src/main/resources/assets/basemetals/lang/es_ES.lang
+++ b/src/main/resources/assets/basemetals/lang/es_ES.lang
@@ -374,3 +374,37 @@ tooltip.aquarium.armor=Respirar bajo el agua
 tooltip.coldiron.armor=Inmunidad fuego
 tooltip.mithril.armor=Protección contra el veneno y se marchitan
 tooltip.starsteel.armor=Menos gravedad
+
+
+achievement.this_is_new=Esta es la nueva ...
+achievement.blocktastic=Cubo!
+achievement.geologist=Geólogo
+achievement.brass_maker=Latón
+achievement.bronze_maker=Bronce
+achievement.electrum_maker=Electrum
+achievement.steel_maker=Acero
+achievement.invar_maker=Invar
+achievement.mithril_maker=Mithril
+achievement.aquarium_maker=Acuario
+achievement.metallurgy=Metalurgia
+achievement.demon_slayer=Demon Slayer
+achievement.angel_of_death=Ángel de la Muerte
+achievement.scuba_diver=buceador
+achievement.juggernaut=Juggernaut
+achievement.moon_boots=Luna Walker
+achievement.this_is_new.desc=Smelt un nuevo metal de los Metales Base mod
+achievement.blocktastic.desc=Colocar un bloque de metal que no es ni el hierro ni el oro
+achievement.geologist.desc=Haz un martillo de un bloque de metal
+achievement.brass_maker.desc=Combinar cobre y zinc en polvo para hacer latón
+achievement.bronze_maker.desc=Combinar cobre en polvo y estaño para hacer bronce
+achievement.electrum_maker.desc=Combinar plata en polvo y el oro para hacer electrum
+achievement.steel_maker.desc=Combinar hierro en polvo y carbón para fabricar acero
+achievement.invar_maker.desc=Combinar hierro en polvo y níquel para hacer invar
+achievement.mithril_maker.desc=Combinar plata en polvo, de hierro-frío y mercurio para hacer mithril
+achievement.aquarium_maker.desc=Combinar cobre y zinc en polvo con cristales prismarine para hacer acuario
+achievement.metallurgy.desc=Craft cualquier mezcla de aleación
+achievement.demon_slayer.desc=Use un traje completo de armadura de hierro-frío y blandir una espada de hierro-frío
+achievement.angel_of_death.desc=Use un traje completo de armadura de mithril y blandir una espada mithril
+achievement.scuba_diver.desc=Use un traje completo de armadura acuario y nadar bajo el agua
+achievement.juggernaut.desc=Use un traje completo de armadura adamantino
+achievement.moon_boots.desc=Use un par de botas de estrella de acero
