--- a/src/main/resources/assets/basemetals/lang/it_IT.lang
+++ b/src/main/resources/assets/basemetals/lang/it_IT.lang
@@ -374,3 +374,37 @@ tooltip.aquarium.armor=Respirare sott'acqua
 tooltip.coldiron.armor=Immunità al fuoco
 tooltip.mithril.armor=Protezione da veleno & appassire
 tooltip.starsteel.armor=Meno gravità
+
+
+achievement.this_is_new=Questa è una novità ...
+achievement.blocktastic=Cubo!
+achievement.geologist=Geologo
+achievement.brass_maker=Brass
+achievement.bronze_maker=Bronzo
+achievement.electrum_maker=Electrum
+achievement.steel_maker=Acciaio
+achievement.invar_maker=Invar
+achievement.mithril_maker=Mithril
+achievement.aquarium_maker=Aquarium
+achievement.metallurgy=Metallurgia
+achievement.demon_slayer=Demone Slayer
+achievement.angel_of_death=Angel of Death
+achievement.scuba_diver=SCUBA Diver
+achievement.juggernaut=Juggernaut
+achievement.moon_boots=Luna Walker
+achievement.this_is_new.desc=puzzava un nuovo metallo dai metalli di base mod
+achievement.blocktastic.desc=Inserite un blocco di metallo che non è né il ferro, né oro
+achievement.geologist.desc=Fare un martello da un blocco di metallo
+achievement.brass_maker.desc=Combina il rame e zinco in polvere per fare in ottone
+achievement.bronze_maker.desc=Combina il rame in polvere e stagno per fare il bronzo
+achievement.electrum_maker.desc=Combina l'argento in polvere e oro per fare electrum
+achievement.steel_maker.desc=Combina polvere di ferro e carbone per produrre l'acciaio
+achievement.invar_maker.desc=Combine polvere di ferro e nichel per fare invar
+achievement.mithril_maker.desc=Combine argento in polvere, freddo-ferro e mercurio per fare Mithril
+achievement.aquarium_maker.desc=Combine di rame e zinco in polvere con cristalli prismarine per rendere acquario
+achievement.metallurgy.desc=Craft qualsiasi miscela lega
+achievement.demon_slayer.desc=Indossare un abito pieno di armatura freddo-ferro e brandire una spada a freddo-ferro
+achievement.angel_of_death.desc=Indossare un abito pieno di mithril armatura e brandire una spada mithril
+achievement.scuba_diver.desc=Indossare un abito pieno di armatura acquario e nuotare sotto l'acqua
+achievement.juggernaut.desc=Indossare un abito pieno di armatura adamantina
+achievement.moon_boots.desc=Indossare un paio di stivali star-acciaio
