--- a/src/main/resources/assets/basemetals/lang/en_CA.lang
+++ b/src/main/resources/assets/basemetals/lang/en_CA.lang
@@ -370,3 +370,37 @@ tooltip.aquarium.armor=Full suit: breathe underwater
 tooltip.coldiron.armor=Full suit: fire immunity
 tooltip.mithril.armor=Full suit: protection from poison & wither
 tooltip.starsteel.armor=Reduces your weight
+
+
+achievement.this_is_new=This is new...
+achievement.blocktastic=Blocktastic!
+achievement.geologist=Geologist
+achievement.brass_maker=Brass
+achievement.bronze_maker=Bronze
+achievement.electrum_maker=Electrum
+achievement.steel_maker=Steel
+achievement.invar_maker=Invar
+achievement.mithril_maker=Mithril
+achievement.aquarium_maker=Aquarium
+achievement.metallurgy=Metallurgy
+achievement.demon_slayer=Demon Slayer
+achievement.angel_of_death=Angel of Death
+achievement.scuba_diver=SCUBA Diver 
+achievement.juggernaut=Juggernaut
+achievement.moon_boots=Moon Walker
+achievement.this_is_new.desc=Smelt a new metal from the Base Metals mod
+achievement.blocktastic.desc=Place a metal block that is neither iron nor gold
+achievement.geologist.desc=Make a hammer from a metal block
+achievement.brass_maker.desc=Combine powdered copper and zinc to make brass
+achievement.bronze_maker.desc=Combine powdered copper and tin to make bronze
+achievement.electrum_maker.desc=Combine powdered silver and gold to make electrum
+achievement.steel_maker.desc=Combine powdered iron and charcoal to make steel
+achievement.invar_maker.desc=Combine powdered iron and nickel to make invar
+achievement.mithril_maker.desc=Combine powdered silver, cold-iron and mercury to make mithril
+achievement.aquarium_maker.desc=Combine powdered copper and zinc with prismarine crystals to make aquarium
+achievement.metallurgy.desc=Craft any alloy blend
+achievement.demon_slayer.desc=Wear a full suit of cold-iron armor and wield a cold-iron sword
+achievement.angel_of_death.desc=Wear a full suit of mithril armor and wield a mithril sword
+achievement.scuba_diver.desc=Wear a full suit of aquarium armor and swim under water
+achievement.juggernaut.desc=Wear a full suit of adamantine armor
+achievement.moon_boots.desc=Wear a pair of star-steel boots
