--- a/src/main/resources/assets/basemetals/lang/pt_BR.lang
+++ b/src/main/resources/assets/basemetals/lang/pt_BR.lang
@@ -372,3 +372,36 @@ tooltip.aquarium.armor=Respirar debaixo d'água
 tooltip.coldiron.armor=Imunidade fogo
 tooltip.mithril.armor=Proteção contra veneno e murchar
 tooltip.starsteel.armor=Menos gravidade
+
+achievement.this_is_new=Isso é novo ...
+achievement.blocktastic=Bloco!
+achievement.geologist=Geólogo
+achievement.brass_maker=Latão
+achievement.bronze_maker=Bronze
+achievement.electrum_maker=Electrum
+achievement.steel_maker=Aço
+achievement.invar_maker=Invar
+achievement.mithril_maker=Mithril
+achievement.aquarium_maker=Aquarium
+achievement.metallurgy=Metalurgia
+achievement.demon_slayer=Demônio Assassino
+achievement.angel_of_death=Anjo da Morte
+achievement.scuba_diver=SCUBA Diver
+achievement.juggernaut=Juggernaut
+achievement.moon_boots=Lua Walker
+achievement.this_is_new.desc=Smelt um novo metal dos Metais Básicos mod
+achievement.blocktastic.desc=Coloque um bloco de metal que não é nem ferro nem ouro
+achievement.geologist.desc=Faça um martelo a partir de um bloco de metal
+achievement.brass_maker.desc=Combine cobre e zinco em pó para fazer bronze
+achievement.bronze_maker.desc=Combine cobre em pó e estanho para fazer o bronze
+achievement.electrum_maker.desc=Combine prata em pó e ouro para fazer electrum
+achievement.steel_maker.desc=Combine ferro em pó e carvão para produzir aço
+achievement.invar_maker.desc=Combine pó de ferro e níquel para fazer invar
+achievement.mithril_maker.desc=Combine prata em pó, ferro-frio e mercúrio para fazer mithril
+achievement.aquarium_maker.desc=Combine cobre e zinco em pó com cristais prismarine para fazer aquário
+achievement.metallurgy.desc=Craft qualquer mistura de liga
+achievement.demon_slayer.desc=Usar um terno completo de armadura de ferro-frio e empunhar uma espada de ferro-frio
+achievement.angel_of_death.desc=Usar um terno completo de armadura mithril e empunhar uma espada mithril
+achievement.scuba_diver.desc=visto uma armadura completa aquário e nadar debaixo de água
+achievement.juggernaut.desc=Usar um terno completo de armadura adamantine
+achievement.moon_boots.desc=Usar um par de botas de estrela de aço
