improved vanilla door items and added stone and diamond hammers. Also fixed the iron and gold plate crafting recipes

--- a/src/main/resources/assets/basemetals/lang/en_PT.lang
+++ b/src/main/resources/assets/basemetals/lang/en_PT.lang
@@ -423,3 +423,8 @@ achievement.angel_of_death.desc=Wear a full suit of ghost silver armor and wield
 achievement.scuba_diver.desc=Wear a full suit of fish-steel armor and swim under water
 achievement.juggernaut.desc=Wear a full suit of unbreakable armor
 achievement.moon_boots.desc=Wear a pair of star-steel boots
+
+
+item.basemetals.diamond_crackhammer.name=Diamond Crack Hammer
+item.basemetals.wood_crackhammer.name=Wooden Crack Hammer
+item.basemetals.stone_crackhammer.name=Stone Crack Hammer
