--- a/src/main/resources/assets/basemetals/lang/zh_CN.lang
+++ b/src/main/resources/assets/basemetals/lang/zh_CN.lang
@@ -425,3 +425,8 @@ achievement.angel_of_death.desc=穿秘银铠甲的完整西装，挥舞剑秘银
 achievement.scuba_diver.desc=穿铠甲的水族馆一个完整的西装，在水中游泳
 achievement.juggernaut.desc=佩戴精金铠甲的完整套装
 achievement.moon_boots.desc=穿一双星钢靴
+
+
+item.basemetals.diamond_crackhammer.name=鑽石大锤
+item.basemetals.wood_crackhammer.name=木大锤
+item.basemetals.stone_crackhammer.name=石大锤
