--- a/src/main/resources/assets/basemetals/lang/es_ES.lang
+++ b/src/main/resources/assets/basemetals/lang/es_ES.lang
@@ -428,3 +428,8 @@ achievement.angel_of_death.desc=Use un traje completo de armadura de mithril y b
 achievement.scuba_diver.desc=Use un traje completo de armadura acuario y nadar bajo el agua
 achievement.juggernaut.desc=Use un traje completo de armadura adamantino
 achievement.moon_boots.desc=Use un par de botas de estrella de acero
+
+
+item.basemetals.diamond_crackhammer.name=Almádena de Diamante
+item.basemetals.wood_crackhammer.name=Almádena de Madera
+item.basemetals.stone_crackhammer.name=Almádena de Piedra
